crates/ruff_linter/src/rules/flake8_import_conventions/snapshots/ruff_linter__rules__flake8_import_conventions__tests__custom_banned_from.snap
---
source: crates/ruff_linter/src/rules/flake8_import_conventions/mod.rs
---
custom_banned_from.py:1:1: ICN003 (banned-import-from) Members of `logging.config` should not be imported explicitly
  |
1 | from logging.config import BaseConfigurator  # banned
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ICN003 (banned-import-from)
2 | from typing import Any, Dict  # banned
3 | from typing import *  # banned
  |

custom_banned_from.py:2:1: ICN003 (banned-import-from) Members of `typing` should not be imported explicitly
  |
1 | from logging.config import BaseConfigurator  # banned
2 | from typing import Any, Dict  # banned
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ICN003 (banned-import-from)
3 | from typing import *  # banned
  |

custom_banned_from.py:3:1: ICN003 (banned-import-from) Members of `typing` should not be imported explicitly
  |
1 | from logging.config import BaseConfigurator  # banned
2 | from typing import Any, Dict  # banned
3 | from typing import *  # banned
  | ^^^^^^^^^^^^^^^^^^^^ ICN003 (banned-import-from)
4 |
5 | from pandas import DataFrame  # banned
  |

custom_banned_from.py:5:1: ICN003 (banned-import-from) Members of `pandas` should not be imported explicitly
  |
3 | from typing import *  # banned
4 |
5 | from pandas import DataFrame  # banned
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ ICN003 (banned-import-from)
6 | from pandas import *  # banned
  |

custom_banned_from.py:6:1: ICN003 (banned-import-from) Members of `pandas` should not be imported explicitly
  |
5 | from pandas import DataFrame  # banned
6 | from pandas import *  # banned
  | ^^^^^^^^^^^^^^^^^^^^ ICN003 (banned-import-from)
7 |
8 | import logging.config  # ok
  |
