crates/ruff_linter/src/rules/flake8_import_conventions/snapshots/ruff_linter__rules__flake8_import_conventions__tests__override_defaults.snap
---
source: crates/ruff_linter/src/rules/flake8_import_conventions/mod.rs
---
override_default.py:3:8: ICN001 (unconventional-import-alias) `altair` should be imported as `alt`
  |
1 | import math  # not checked
2 |
3 | import altair  # unconventional
  |        ^^^^^^ ICN001 (unconventional-import-alias)
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
  |
  = help: Alias `altair` to `alt`

override_default.py:4:8: ICN001 (unconventional-import-alias) `matplotlib.pyplot` should be imported as `plt`
  |
3 | import altair  # unconventional
4 | import matplotlib.pyplot  # unconventional
  |        ^^^^^^^^^^^^^^^^^ ICN001 (unconventional-import-alias)
5 | import numpy  # unconventional
6 | import pandas  # unconventional
  |
  = help: Alias `matplotlib.pyplot` to `plt`

override_default.py:5:8: ICN001 (unconventional-import-alias) `numpy` should be imported as `nmp`
  |
3 | import altair  # unconventional
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
  |        ^^^^^ ICN001 (unconventional-import-alias)
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
  |
  = help: Alias `numpy` to `nmp`

override_default.py:6:8: ICN001 (unconventional-import-alias) `pandas` should be imported as `pd`
  |
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
6 | import pandas  # unconventional
  |        ^^^^^^ ICN001 (unconventional-import-alias)
7 | import seaborn  # unconventional
  |
  = help: Alias `pandas` to `pd`

override_default.py:7:8: ICN001 (unconventional-import-alias) `seaborn` should be imported as `sns`
  |
5 | import numpy  # unconventional
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
  |        ^^^^^^^ ICN001 (unconventional-import-alias)
8 |
9 | import altair as altr  # unconventional
  |
  = help: Alias `seaborn` to `sns`

override_default.py:9:18: ICN001 (unconventional-import-alias) `altair` should be imported as `alt`
   |
 7 | import seaborn  # unconventional
 8 |
 9 | import altair as altr  # unconventional
   |                  ^^^^ ICN001 (unconventional-import-alias)
10 | import matplotlib.pyplot as plot  # unconventional
11 | import numpy as np  # unconventional
   |
   = help: Alias `altair` to `alt`

override_default.py:10:29: ICN001 (unconventional-import-alias) `matplotlib.pyplot` should be imported as `plt`
   |
 9 | import altair as altr  # unconventional
10 | import matplotlib.pyplot as plot  # unconventional
   |                             ^^^^ ICN001 (unconventional-import-alias)
11 | import numpy as np  # unconventional
12 | import pandas as pdas  # unconventional
   |
   = help: Alias `matplotlib.pyplot` to `plt`

override_default.py:11:17: ICN001 (unconventional-import-alias) `numpy` should be imported as `nmp`
   |
 9 | import altair as altr  # unconventional
10 | import matplotlib.pyplot as plot  # unconventional
11 | import numpy as np  # unconventional
   |                 ^^ ICN001 (unconventional-import-alias)
12 | import pandas as pdas  # unconventional
13 | import seaborn as sbrn  # unconventional
   |
   = help: Alias `numpy` to `nmp`

override_default.py:12:18: ICN001 (unconventional-import-alias) `pandas` should be imported as `pd`
   |
10 | import matplotlib.pyplot as plot  # unconventional
11 | import numpy as np  # unconventional
12 | import pandas as pdas  # unconventional
   |                  ^^^^ ICN001 (unconventional-import-alias)
13 | import seaborn as sbrn  # unconventional
   |
   = help: Alias `pandas` to `pd`

override_default.py:13:19: ICN001 (unconventional-import-alias) `seaborn` should be imported as `sns`
   |
11 | import numpy as np  # unconventional
12 | import pandas as pdas  # unconventional
13 | import seaborn as sbrn  # unconventional
   |                   ^^^^ ICN001 (unconventional-import-alias)
14 |
15 | import altair as alt  # conventional
   |
   = help: Alias `seaborn` to `sns`
